--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -30,7 +30,7 @@ Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progres
         RTd & 
         1 & 
         media &
-        Inizialmente c'è stata una certa confusione riguardo il formato ed i contenuti della documentazione da consegnare. Ad ogni riunione svolta si è cercato tra tutti i membri di sollevare e risolvere insieme ogni eventuale dubbio, in alcuni casi con l'aiuto di risorse online, standard ISO e le indicazioni fornite dal committente.\\
+        Inizialmente c'è stata una certa confusione riguardo il formato ed i contenuti della documentazione da consegnare. Ad ogni riunione svolta si è cercato tra tutti i membri di sollevare e risolvere insieme ogni eventuale dubbio, in alcuni casi con l'aiuto di risorse online, standard \glo{ISO} e le indicazioni fornite dal committente.\\
         \hline
         RPa & 
         1, 2 & 
