--- a/DocumentiEsterni/Glossario/src/Alfabeto/I.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/I.tex
@@ -33,4 +33,7 @@ In questi incontri, normalmente fisici, viene redatto un verbale con un segretar
 \TermineGlossario{IOS}
 \DefinizioneGlossario{(precedentemente iPhone OS) è un sistema operativo mobile sviluppato da Apple per iPhone, iPod touch e iPad (Dispositivi embedded del azienda Apple). È il secondo sistema operativo mobile più installato al mondo, dopo Android.}
 
+\TermineGlossario{ISO}
+\DefinizioneGlossario{(L'Organizzazione internazionale per la normazione, è la più importante organizzazione a livello mondiale per la definizione di norme tecniche. Svolge funzioni consultive per l'Organizzazione delle Nazioni Unite per l'educazione, la scienza e la cultura.}
+
 \clearpage
