--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
@@ -31,17 +31,17 @@ Verificatore    &  60 &  5 & 900 &  & 75 \\
 \subsubsection{Conclusioni}
 Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti motivi:
 \begin{itemize}
-	\item \textbf{Responsabile}:{i componenti designati a questo ruolo in questa fase a fare i responsabili non avevano esperienza è quindi le ore preventivate hanno tenuto conto di questo; }
-	\item \textbf{Amministratore}:{uno dei componenti del gruppo aveva già esperienza in merito a vari strumenti e tecnologie utilizzabili per migliorare la produttività del gruppo;}
-	\item \textbf{Analista}:{lo scostamento maggiore si è fatta una sovrastima delle ore richieste a tale compito perchè alcune attività di analisi si pensavano richiedessero più tempo;}
+	\item \textbf{Responsabile}: {i componenti designati a questo ruolo in questa fase a fare i responsabili non avevano esperienza è quindi le ore preventivate hanno tenuto conto di questo; }
+	\item \textbf{Amministratore}: {uno dei componenti del gruppo aveva già esperienza in merito a vari strumenti e tecnologie utilizzabili per migliorare la produttività del gruppo;}
+	\item \textbf{Analista}: {lo scostamento maggiore si è fatta una sovrastima delle ore richieste a tale compito perchè alcune attività di analisi si pensavano richiedessero più tempo;}
 	\item \textbf{Verificatore}: {lo scostamento è in linea con il preventivo all'incirca.}
 \end{itemize}
 
 \subsubsection{Ragionamento sugli scostamenti}
 La suddivisione a stadi di una fase permette di migliorare la produttività del team, visto che viene effettuato un check intermedio alla fine di uno stadio:
 \begin{itemize}
-	\item Dai \textbf{verificatori}:che validano i deliverables relativi a quello stadio;
-	\item E dal \textbf{responsabile}:che verifica la presenza di eventuali problematiche.
+	\item Dai \textbf{verificatori}, che validano i deliverables relativi a quello stadio;
+	\item E dal \textbf{responsabile}, che verifica la presenza di eventuali problematiche.
 \end{itemize}
 Questo fa presupporre che anche i futuri scostamenti siano abbastanza in linea con quello preventivato.
 \subsubsection{Preventivo a finire}
