--- a/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
@@ -61,4 +61,4 @@
 	\end{longtable}
 }
 \subsection{Note}
-All'inizio di ogni stadio viene concordata dal team una rotazione del responsabilità.
+All'inizio di ogni stadio viene concordata dal team una rotazione equa delle responsabilità.
