--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -8,21 +8,21 @@ Qui sotto viene esposto sinteticamente lo schema generale, dove ogni stadio è c
         \item Stadio 2 - Soddisfacimento requisiti d'ingresso.
     \end{itemize}
 
-    \item \textbf{Fase di Progettazione}:
+    \item \textbf{Fase di Progettazione architetturale}:
     \begin{itemize}
         \item Stadio 3 - Strutturazione delle componenti;
     \end{itemize}
 
-    \item \textbf{Fase di Codifica}:
+    \item \textbf{Fase di Progettazione al dettaglio e codifica}:
     \begin{itemize}
         \item Stadio 4 - Concretizzazione e sviluppo;
         \item Stadio 5 - Sviluppo e rifinitura.
     \end{itemize}
 
-    \item \textbf{Fase di Validazione}:
+    \item \textbf{Fase di Validazione e collaudo}:
     \begin{itemize}
         \item Stadio 6 - Qualifica e testing;
-        \item Stadio 7 - Validazione e collaudo.
+        \item Stadio 7 - Collaudo delle parti e finalizzazione.
     \end{itemize}
 \end{itemize}
 
