--- a/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
@@ -6,7 +6,8 @@
 		\caption{Tabella di redazione}\\
 		\rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Data di redazione}} & \textcolor{\secondaryColor}{\textbf{Firma}}\\ \endhead        		
-        {Elvis Murtezan} & 2021-01-04 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
+		{Elvis Murtezan} & 2021-01-04 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
+		{Giovanni Grigoletto} & 2021-01-04 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/giovanni.png}\\
 	\end{longtable}
 }
 
