fix conti+ minor fixes

--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
@@ -18,14 +18,14 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 \textcolor{\secondaryColor}{\textbf{Ore complessive}}\\	
 \endhead
         
-\AW{}                     & 7  & - & -  & 8 & 9 & 8 & 32 \\
-\AT{}                     & -  & 7 & 7  & 7 & - & 11 & 32 \\
-\AD{}                     & 7  & - & -  & 7 & 10 & 9 & 33 \\
-\EC{}                     & 7  & - & 7  & - & 10 & 8 & 32 \\
-\EM{}                     & -  & 6 & -  & 7 & 10 & 9 & 32 \\
-\FP{}                     & -  & - & 6  & 10 & 10 & 7 & 33 \\
-\GG{}                     & -  & 7 & -  & 10 & 9 & 7 & 33 \\
-\textbf{Ore totali ruolo} & 21 & 20 & 20 & 49 & 58 & 59 & 227
+\AW{}                     & 7  & - & - & 8 & 9 & 8 & 32 \\
+\AT{}                     & -  & 7 & 7 & 7 & - & 11 & 32 \\
+\AD{}                     & 7  & - & - & 7 & 10 & 9 & 33 \\
+\EC{}                     & 7  & - & 7 & - & 10 & 8 & 32 \\
+\EM{}                     & -  & 6 & - & 7 & 10 & 9 & 32 \\
+\FP{}                     & -  & - & 6 & 10 & 10 & 7 & 33 \\
+\GG{}                     & -  & 7 & - & 10 & 9 & 7 & 33 \\
+\textbf{Ore totali ruolo} & 21 & 20 & 20 & 49 & 58 & 59 & 227 \\
 
 		
 \end{longtable}
@@ -81,8 +81,8 @@ Amministratore  &  20 &  400 \\
 Analista        &  20 &  500 \\
 Progettista     &  49 &  1078 \\
 Programmatore   &  58 &  870 \\
-Verificatore    &  58 &  870 \\
-\textbf{Totale} &  226 & 4348 \\	
+Verificatore    &  59 &  885 \\
+\textbf{Totale} &  227 & 4363 \\	
         	
 \end{longtable}
 }
