--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
@@ -21,7 +21,7 @@ Sigle identificative per i ruoli indicati nelle tabelle e nei grafici:
         {\programmatore} & {15} \\
         {\verificatore} & {15} 
     \end{longtable}
-\include{./src/Preventivo/src/PreventivoAnalisi.tex}
+\input{./src/Preventivo/src/PreventivoAnalisi.tex}
 \input{./src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex}
 
 \input{./src/Preventivo/src/PreventivoProgettazioneDettaglio.tex}
