--- a/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C3/main.tex
@@ -4,6 +4,12 @@ Il capitolato in esame è intitolato "GDP Gathering Detection Platform", propost
 L'azienda propone la creazione di un prototipo software in grado di acquisire ed elaborare dei dati per fornire una panoramica sulle possibili zone di assembramento di persone.
 Questi dati potranno essere acquisiti da telecamere, contapersone, servizi Google, orari dei mezzi di trasporto pubblici e flussi di prenotazione Uber.
 Grazie a questi dati si può riuscire a "mappare" le aree con più affluenza, e cercare di prevenire gli ingorghi.
+\subsection{Prerequisiti}
+\begin{itemize}
+    \item competenze nell'elaborazione di big data;
+    \item competenze nello sviluppo di back-end e front-end di applicativi web;
+    \item conoscenze sul funzionamenteo dei protocolli asincroni.
+\end{itemize}
 \subsection{Tecnologie coinvolte}
 \begin{itemize}
     \item \glo{Java} e \glo{TypeScript}: usati per lo sviluppo di back-end e front-end della Web Application;
