--- a/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProcesso/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProcesso/main.tex
@@ -1,8 +1,8 @@
 Per ricercare qualità nello svolgimento del progetto si adoperano dei processi. Inizialmente tali processi sono stati scelti tra quelli proposti nello standard ISO/IEC/IEEE 12207:1995,
-successivamente sono stati semplificati o adattati secondo le esigenze
+successivamente sono stati semplificati o adattati secondo le esigenze.
 Il risultato sono i processi esposti a seguito.
 \subsection{Processi di Sviluppo}
-    Questo processo contiene tutte le attività tipiche dello sviluppo software: alcune di esse sono molto importanti per cui vengono approfondite: si tratta dell'analisi dei requisiti,
+    Questo processo contiene tutte le attività tipiche dello sviluppo software, alcune di esse sono molto importanti per cui vengono approfondite: si tratta dell'analisi dei requisiti,
     la progettazione dell'architettura, la progettazione di dettaglio e la codifica.
     \subsubsection{Analisi dei requisiti}
         Durante l'analisi le informazioni ottenute dalle varie fonti sono trasformate in forma di casi d'uso e requisiti.
