--- a/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
@@ -13,6 +13,14 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        0.0.1                  & 2021-01-02                                       & Prima stesura                                & Andrea De Tomasi & \redattore{} \\
+        0.0.7                  & 2021-01-05                                       & Stesura Appendice §C                         & Abdelwahad kandoul & \redattore{} \\
+        0.0.6                  & 2021-01-04                                       & Stesura Appendice §A e §B                          & Abdelwahad kandoul & \redattore{} \\
+        0.0.5                  & 2021-01-03                                       & Conclusa stesura §3                            & Abdelwahad kandoul & \redattore{} \\
+        0.0.4                  & 2021-01-02                                       & Inizio stesura §3                            & Abdelwahad kandoul & \redattore{} \\
+        0.0.3                  & 2021-01-02                                       & Prima stesura §2                              & Andrea De Tomasi & \redattore{} \\
+        0.0.2                  & 2021-01-01                                       & Stesura §1                            & Abdelwahad kandoul & \redattore{} \\
+        0.0.1                  & 2020-11-26                                       & Creazione documento \LaTeX{}                                & Filippo  & \progettista{} \\
+    
+    
     \end{longtable}
 }
