--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
@@ -20,106 +20,58 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
+
 \subsubsection{UC 6 - Marca postazione igienizzata}
 
 \begin{itemize}
-\item \textbf{Attori primari:} utente autenticato, igienizzatore, amministratore;
-\item \textbf{Descrizione:} l’utente può marcare la postazione selezionata come igienizzata, quindi servibile ed occupabile da un successivo utente;
-\item \textbf{Precondizione:} l’utente naviga nell’apposita sezione di gestione della postazione; 
-\item \textbf{Postcondizione:} l’utente ha marcato con successo una postazione come igienizzata;
+\item \textbf{Attori primari:} personale interno autenticato;
+\item \textbf{Descrizione:} l'attore può marcare la postazione che sta usando al momento della prenotazione come igienizzata, quindi servibile ed occupabile da un successivo utente;
+\item \textbf{Precondizione:} l'attore ha finito di usufruire della postazione; 
+\item \textbf{Postcondizione:} l’attore, dall'apposita sezione, marca postazione come igienizzata;
 \item \textbf{Scenario principale:} 
 	\begin{itemize}
-		\item l’utente naviga nell’apposita sezione di gestione della postazione;		
-		\item l’utente contrassegna la postazione come igienizzata;
-		\item il sistema elabora correttamente la richiesta o, in alternativa, restituisce un errore, che può essere dovuto al seguente fattore:
-		\begin{itemize}
-			\item la postazione selezionata è stata marcata come disabilitata da un amministratore[UC1.2].
-		\end{itemize}
+		\item al termine dell'utilizzo della postazione, il sistema invia una domanda di conferma di igienizzazione della postazione;		
+		\item l’utente conferma l'avvenuta igienizzazione;
+		\item il sistema elabora correttamente la richiesta rendendo disponibile la postazione per una successiva prenotazione.
 	\end{itemize}
 \end{itemize}
 
 \subsubsection{UC .2 - Marca postazione sporca}
 
 \begin{itemize}
-\item \textbf{Attori primari:} utente autenticato, amministratore;
-\item \textbf{Descrizione:} l’utente può marcare la postazione selezionata come sporca, quindi non servibile ed occupabile da un successivo utente;
-\item \textbf{Precondizione:} l’utente naviga nell’apposita sezione di gestione della postazione; 
-\item \textbf{Postcondizione:} l’utente ha marcato con successo una postazione come sporca;
+\item \textbf{Attori primari:} personale interno autenticato;
+\item \textbf{Descrizione:} al momento della scansione del tag RFID da parte del dispositivo dell'attore, la postazione viene automaticamente marcata come sporca;
+\item \textbf{Precondizione:} l'attore ha scansionato il tag RFID; 
+\item \textbf{Postcondizione:} il sistema marca la postazione come sporca;
 \item \textbf{Scenario principale:} 
-	\begin{itemize}
-		\item l’utente naviga nell’apposita sezione di gestione della postazione;		
-		\item l’utente contrassegna la postazione come sporca;
-		\item il sistema elabora correttamente la richiesta o, in alternativa, restituisce un errore, che può essere dovuto al seguente fattore:
-		\begin{itemize}
-			\item la postazione selezionata è stata marcata come disabilitata da un amministratore[UC1.2].
-		\end{itemize}
+		\item il sistema elabora correttamente la richiesta impedendo la prenotazione della postazione da un utente successivo finché non verrà nuovamente igienizzata.
 	\end{itemize}
 \end{itemize}
+
 \newpage
-\subsubsection{UC .3 - Marca postazione libera}
+
+\subsubsection{UC .3 - Marca postazione occupata}
 
 \begin{itemize}
-\item \textbf{Attori primari:} utente autenticato, amministratore;
-\item \textbf{Descrizione:} l’utente può marcare la postazione selezionata come libera, quindi servibile ed occupabile da un successivo utente;
-\item \textbf{Precondizione:} l’utente naviga nell’apposita sezione di gestione della postazione;
-\item \textbf{Postcondizione:} l’utente ha marcato con successo una postazione come libera;
-\item \textbf{Scenario principale:} 
-	\begin{itemize}
-		\item l’utente naviga nell’apposita sezione di gestione della postazione;
-		\item l’utente contrassegna la postazione come libera;
-		\item il sistema elabora correttamente la richiesta o, in alternativa, restituisce un errore che può essere dovuto al seguente fattore:
-		\begin{itemize}
-			\item la postazione selezionata è stata marcata come disabilitata da un amministratore[UC1.2].
-		\end{itemize}
-	\end{itemize}
+\item \textbf{Attori primari:} personale interno autenticato;
+\item \textbf{Descrizione:} l'attore scansiona con il suo dispositivo il tag RFID, confermando la sua presenza effettiva in postazione;
+\item \textbf{Precondizione:} l'attore scansiona il tag RFID;
+\item \textbf{Postcondizione:} l'attore ha marcato con successo una postazione come occupata;
 \end{itemize}
 
-\subsubsection{UC .4 - Marca postazione occupata}
+%\subsubsection{UC .5 - Conferma prenotazione della postazione}%
 
-\begin{itemize}
-\item \textbf{Attori primari:} utente autenticato, amministratore;
-\item \textbf{Descrizione:} l’utente può marcare la postazione selezionata come occupata, quindi non più occupabile da un altro utente;
-\item \textbf{Precondizione:} l’utente naviga nell’apposita sezione di gestione della postazione;
-\item \textbf{Postcondizione:} l’utente ha marcato con successo una postazione come occupata;
-\item \textbf{Scenario principale:} 
-	\begin{itemize}
-		\item l’utente naviga nell’apposita sezione di gestione della postazione;
-		\item l’utente contrassegna la postazione come occupata;
-		\item il sistema elabora correttamente la richiesta o, in alternativa, restituisce un errore che può essere dovuto al seguente fattore:
-		\begin{itemize}
-			\item la postazione selezionata è stata marcata come disabilitata da un amministratore[UC1.2].
-		\end{itemize}
-	\end{itemize}
-\end{itemize}
-
-\subsubsection{UC .5 - Conferma prenotazione della postazione}
-
-\begin{itemize}
-\item \textbf{Attori primari:} utente autenticato, amministratore;
-\item \textbf{Descrizione:} l’utente è tenuto a confermare l’occupazione, e quindi la prenotazione, della postazione in uso;
-\item \textbf{Precondizione:} l’utente conferma la sua prenotazione dall’apposita schermata pop-up; 
-\item \textbf{Postcondizione:} l’utente ha confermato con successo la prenotazione della postazione;
-\item \textbf{Scenario principale:} 
-	\begin{itemize}
-		\item l’utente contrassegna la postazione come occupata;
-		\item il sistema elabora correttamente la richiesta.
-	\end{itemize}
-\end{itemize}
-
-\subsubsection{UC .6 - Contrassegna postazione disabilitata}
-
-\begin{itemize}
-\item \textbf{Attori primari:} amministratore;
-\item \textbf{Descrizione:} l’amministratore può marcare la postazione selezionata come disabilitata, quindi non più servibile né occupabile da alcun utente;
-\item \textbf{Precondizione:} l’amministratore naviga nell’apposita sezione di gestione della postazione;
-\item \textbf{Postcondizione:} l’amministratore ha marcato con successo una postazione come disabilita;
-\item \textbf{Scenario principale:} 
-	\begin{itemize}
-		\item l’amministratore naviga nell’apposita sezione di gestione della postazione;
-		\item l’amministratore contrassegna la postazione come disabilitata;
-		\item il sistema elabora correttamente la richiesta.
-	\end{itemize}
-\end{itemize}
+%\begin{itemize}%
+%\item \textbf{Attori primari:} personale interno autenticato;%
+%\item \textbf{Descrizione:} l’utente è tenuto a confermare l’occupazione, e quindi la prenotazione, della postazione in uso;%
+%\item \textbf{Precondizione:} l’utente conferma la sua prenotazione dall’apposita schermata pop-up; %
+%\item \textbf{Postcondizione:} l’utente ha confermato con successo la prenotazione della postazione;%
+%\item \textbf{Scenario principale:} %
+%	\begin{itemize}%
+%		\item l’utente contrassegna la postazione come occupata;%
+%		\item il sistema elabora correttamente la richiesta.%
+%	\end{itemize}%
+%\end{itemize}%
 
 \subsubsection{UC .7 - Contrassegna postazione abilitata}
 
