--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
@@ -1,9 +1,7 @@
-\input{src/CasiDUso/src/UC5.tex}
+\input{src/CasiDUso/src/UC-creazionePrenotazione.tex}
 \newpage
-\input{src/CasiDUso/src/UCamm.tex}
+\input{src/CasiDUso/src/UC-statoPostazioni.tex}
 \newpage
-\input{src/CasiDUso/src/UC11.tex}
-\newpage
-\input{src/CasiDUso/src/UC40.tex}
+\input{src/CasiDUso/src/UC-igienizzazionePostazioni.tex}
 \newpage
 
