--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-stanza.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-stanza.tex
@@ -1,7 +1,6 @@
-\subsection{UC-N Aggiunta stanza}
+\subsection{UC-28 Aggiunta stanza}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} aggiungere una stanza alla lista di stanze disponibili;
     \item \textbf{descrizione:} un amministratore pu\`{o} aggiungere una stanza alla lista di stanze censite.
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di gestione delle stanze nell'applicazione web;
     \item \textbf{post-condizioni:} una nuova stanza \`{e} stata aggiunta alla lista di stanze disponibili;
@@ -13,10 +12,9 @@
 \end{itemize}
 
 
-\subsection{UC-N Disabilitazione stanza}
+\subsection{UC-29 Disabilitazione stanza}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} rendere tutte le postazioni di una stanza non prenotabili;
     \item \textbf{descrizione:} un amministratore pu\`{o} disabilitare una stanza, impedendo la prenotazione delle postazioni presenti all'interno della stanza. Tutte le prenotazioni per tutte le postazioni di quella stanza vengono cancellate.
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio della stanza nell'applicazione web;
     \item \textbf{post-condizioni:} la stanza \`{e} disabilitata e tutte le postazioni presenti all'interno della stanza non sono pi\`{u} prenotabili e tutte le prenotazioni future per tutte le postazioni nella stanza sono annullate;
@@ -29,10 +27,9 @@
 \end{itemize}
 
 
-\subsection{UC-N Rimozione stanza}
+\subsection{UC-30 Rimozione stanza}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} disabilitare la prenotazione di una stana;
     \item \textbf{descrizione:} un amministratore pu\`{o} rimuovere una stanza, rimuovendo cos\`{i} la prenotazione delle postazioni presenti all'interno della stanza. Tutte le prenotazioni per quella stanza vengono cancellate.
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio della stanza nell'applicazione web;
     \item \textbf{post-condizioni:} la stanza \`{e} eliminata e tutte le postazioni presenti all'interno della stanza vengono eliminate e tutte le prenotazioni future per tutte le postazioni nella stanza sono annullate;
@@ -46,10 +43,9 @@
 
 
 
-\subsection{UC-N Visualizzazione storico stanza}
+\subsection{UC-31 Visualizzazione storico stanza}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} visualizzare lo storico delle azioni compiute dagli utenti del sistema su tutte le postazioni di una stanza;
     \item \textbf{descrizione:} un amministratore pu\`{o} visualizzare lo storico degli utilizzi e delle pulizie di tutte le postazioni di una stanza, con specificazione dell'utente che ha compiuto ogni azione.
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio di una stanza nell'applicazione web;
     \item \textbf{post-condizioni:} l'amministratore visualizza lo storico di tutte le modifiche/prenotazioni/cancellazioni riguardanti tutte le postazioni della stanza;
@@ -61,10 +57,9 @@
 
 
 
-\subsection{UC-N Scarica report stanza}
+\subsection{UC-32 Scarica report stanza}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} scaricare un report dell'utilizzo del sistema;
     \item \textbf{descrizione:} un amministratore pu\`{o} scaricare un report che sommarizza l'utilizzo delle stanze e delle postazioni.
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio di una stanza nell'applicazione web;
     \item \textbf{post-condizioni:} l'amministratore scarica un report in cui \`{e} possibile consultare lo storico di tutte le modifiche/prenotazioni/cancellazioni riguardanti tutte le postazioni nella stanza;
