--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-postazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-postazione.tex
@@ -1,7 +1,6 @@
-\subsection{UC-N Aggiunta postazione}
+\subsection{UC-24 Aggiunta postazione}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} aggiungere una postazione alla lista di postazioni disponibili;
     \item \textbf{descrizione:} un amministratore pu\`{o} aggiungere una postazione alla lista di postazioni disponibili eventualmente aggiungendo la postazione ad una stanza;
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di gestione delle postazioni nell'applicazione web;
     \item \textbf{post-condizioni:} una nuova postazione \`{e} stata aggiunta alla lista di postazioni disponibili;
@@ -13,10 +12,9 @@
 \end{itemize}
 
 
-\subsection{UC-N Disabilitazione postazione}
+\subsection{UC-25 Disabilitazione postazione}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} rendere una postazione non pi\`{u} prenotabile;
     \item \textbf{descrizione:} un amministratore pu\`{o} disabilitare una postazione, rendendola non prenotabile. Tutte le prenotazioni per quella postazione vengono cancellate.
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio della postazione nell'applicazione web;
     \item \textbf{post-condizioni:} la postazione \`{e} disabilitata e non pi\`{u} prenotabile, inoltre tutte le prenotazioni future per quella postazione sono annullate;
@@ -29,10 +27,9 @@
 \end{itemize}
 
 
-\subsection{UC-N Rimozione postazione}
+\subsection{UC-26 Rimozione postazione}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} rimuovere una postazione alla lista di postazioni disponibili;
     \item \textbf{descrizione:} un amministratore pu\`{o} rimuovere una postazione dalla lista di postazioni disponibili.
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio della postazione nell'applicazione web;
     \item \textbf{post-condizioni:} la postazione \`{e} eliminata e non pi\`{u} prenotabile, inoltre vengono eliminate e  tutte le prenotazione per la postazione sono annullate;
@@ -45,10 +42,9 @@
 \end{itemize}
 
 
-\subsection{UC-N Visualizzazione storico postazione}
+\subsection{UC-27 Visualizzazione storico postazione}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} visualizzare lo storico delle azioni compiute dagli utenti del sistema su una postazione;
     \item \textbf{descrizione:} un amministratore pu\`{o} visualizzare lo storico degli utilizzi e delle pulizie della postazione con specificazione dell'utente che ha compiuto ogni azione.
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio di una postazione nell'applicazione web;
     \item \textbf{post-condizioni:} l'amministratore visualizza lo storico di tutte le modifiche/prenotazioni/cancellazioni riguardanti la postazione;
@@ -63,7 +59,6 @@
 \subsection{UC-N Scarica report postazione}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
-    \item \textbf{scopo:} scaricare un report dell'utilizzo del sistema;
     \item \textbf{descrizione:} un amministratore pu\`{o} scaricare un report che sommarizza l'utilizzo della postazione.
     \item \textbf{pre-condizioni:} l'amministratore autenticato si trova nella pagina di dettaglio di una postazione nell'applicazione web;
     \item \textbf{post-condizioni:} l'amministratore scarica un report in cui \`{e} possibile consultare lo storico di tutte le modifiche/prenotazioni/cancellazioni riguardanti la postazione;
