--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
@@ -1,7 +1,15 @@
-\input{src/CasiDUso/src/UC-creazionePrenotazione.tex}
-\newpage
-\input{src/CasiDUso/src/UC-statoPostazioni.tex}
-\newpage
-\input{src/CasiDUso/src/UC-igienizzazionePostazioni.tex}
-\newpage
+% \input{src/CasiDUso/src/UC-gestioneAutenticazione.tex}
 
+\input{src/CasiDUso/src/UC-visualizzazioneProfilo.tex}
+
+\input{src/CasiDUso/src/UC-modCancProfilo.tex}
+
+% \input{src/CasiDUso/src/UC-crezionePrenotazione.tex}
+
+\input{src/CasiDUso/src/UC-statoPostazioni.tex}
+
+\input{src/CasiDUso/src/UC-postazione.tex}
+
+\input{src/CasiDUso/src/UC-stanza.tex}
+
+% \input{src/CasiDUso/src/UC-igienizzatore.tex}
