--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
@@ -21,7 +21,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 \end{itemize}
 
 
-\subsubsection{UC 6 - Marca postazione igienizzata}
+\subsubsection{UC 20 - Marca postazione igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -36,7 +36,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC .2 - Marca postazione sporca}
+\subsubsection{UC 21 - Marca postazione sporca}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -50,7 +50,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 
 \newpage
 
-\subsubsection{UC .3 - Marca postazione occupata}
+\subsubsection{UC 22 - Marca postazione occupata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -73,7 +73,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 %	\end{itemize}%
 %\end{itemize}%
 
-\subsubsection{UC .7 - Contrassegna postazione abilitata}
+\subsubsection{UC 23 - Contrassegna postazione abilitata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} amministratore;
